ComponentRegistry suport